# obsidian_rag

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  rag.ipynb  run_mistral
sample_data/Algoritmi/: Algoritmi di ordinamento.md  Algoritmi di ricerca.md  Blockchain.md  Classificazione dei problemi di calcolo.md  Clustering.md  Come ragionare per pyhton.md  Costo computazionale.md  Esercizi pdf.md  Funzioni Hash.md  Programmazione iterata agli oggetti.md  Strutture dati avanzate.md  Strutture dati complesse.md
sample_data/Algoritmi/.obsidian/: community-plugins.json  core-plugins-migration.json  core-plugins.json  graph.json  workspace-mobile.json  workspace.json
sample_data/Algoritmi/.obsidian/plugins/obsidian-excalidraw-plugin/: data.json
sample_data/Algoritmi/Esercizi/: Esercizi algoritmi di ordinamento.md  Esercizi algoritmi di ricerca.md  Esercizi esame.md  Esercizi programmazione iterata agli oggetti.md  Esercizi strutture dati avanzate.md
sample_data/Statistical Learning/: Bayesian inference.md  Constrained optimization.md  Discriminant methods.md  Generalized Linear Model.md  Model selection for linear model.md  Resampling methods.md  Simulation From GLM.md  Statistical decision theory.md  Statistical learning introduction.md  Support Vector Machine.md  Survival analysis.md  Tree.md  Untitled.md
