[project]
name = "obsidian-rag"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.4",
    "ipykernel>=7.1.0",
    "langchain>=1.0.5",
    "langchain-chroma>=1.0.0",
    "langchain-ollama>=1.0.0",
    "langchain-text-splitters>=1.0.0",
    "langdetect>=1.0.9",
    "polyglot>=16.7.4",
    "pycld2>=0.42",
    "pypdf>=6.2.0",
    "pypdf2>=3.0.1",
    "v>=1",
]
